RulesEnginSampleCode/src/objects/ChargeProxy__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Charge Proxies</relationshipLabel>
        <relationshipName>Charge_Proxies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChargeGroupId__c</fullName>
        <label>ChargeGroupId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargeId__c</fullName>
        <label>ChargeId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargeType__c</fullName>
        <label>Charge Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EffectivePrice__c</fullName>
        <label>EffectivePrice</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IncludedUnits__c</fullName>
        <label>IncludedUnits</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsDiscountEditable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDiscountEditable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsEffectivePriceEditable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsEffectivePriceEditable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsIncludedUnitsEditable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsIncludedUnitsEditable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsQuantityEditable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsQuantityEditable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsTotalEditable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsTotalEditable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ListPrice__c</fullName>
        <label>ListPrice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ListTotal__c</fullName>
        <label>ListTotal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Charge Proxies</relationshipLabel>
        <relationshipName>Charge_Proxies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductRatePlanCharge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Rate Plan Charge</label>
        <referenceTo>zqu__ProductRatePlanCharge__c</referenceTo>
        <relationshipLabel>Charge Proxies</relationshipLabel>
        <relationshipName>Charge_Proxies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductRatePlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Rate Plan</label>
        <referenceTo>zqu__ProductRatePlan__c</referenceTo>
        <relationshipLabel>Charge Proxies</relationshipLabel>
        <relationshipName>Charge_Proxies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>zqu__ZProduct__c</referenceTo>
        <relationshipLabel>Charge Proxies</relationshipLabel>
        <relationshipName>Charge_Proxies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>zqu__Quote__c</referenceTo>
        <relationshipLabel>Charge Proxies</relationshipLabel>
        <relationshipName>Charge_Proxies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Charge Proxy</label>
    <nameField>
        <label>Charge Proxy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Charge Proxies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>